[package]
name = "neato"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Neato package of useful tools."
homepage = "https://github.com/dave-hay/neato"
repository = "https://github.com/dave-hay/neato"
readme = "README.md"

[lib]
name = "my_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
